fixedIconAlignment

--- a/Web/GraphExplorer/ClientApp/app/components/network/network.css
+++ b/Web/GraphExplorer/ClientApp/app/components/network/network.css
@@ -262,6 +262,7 @@ input[type=checkbox]
     padding: 10px;
     font-size: 2em;
     border: 1px solid #dadada; 
+    vertical-align: bottom;
 }
 
 .configuration .iconSquare
